--- a/src/Template/cup/form/view/list.twig
+++ b/src/Template/cup/form/view/list.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">Список полученных заявок {{ form.title }} ({{ list.count() }})</h2>
+                <h2 class="text-white pb-2 fw-bold">{{ 'Список полученных заявок'|locale }} ({{ list.count() }})</h2>
             </div>
         </div>
     </div>
@@ -25,8 +25,8 @@
                     {% embed 'mixin/datatable.twig' %}
                         {% block thead %}
                             <tr>
-                                <th>Дата получения</th>
-                                <th width="20%" class="text-center no-sorting"></th>
+                                <th>{{ 'Дата получения'|locale }}</th>
+                                <th width="25%" class="text-center no-sorting"></th>
                             </tr>
                         {% endblock %}
 
@@ -34,18 +34,18 @@
                             {% for item in list %}
                                 <tr>
                                     <td data-order="{{ item.date.getTimestamp() }}">
-                                        {{ item.date|df('d.m.Y H:i:s') }}
+                                        {{ item.date|df }}
                                     </td>
-                                    <td width="20%" class="text-center">
-                                        <form action="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить запись?');">
+                                    <td width="25%" class="text-center">
+                                        <form action="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('{{ 'Вы действительно хотите удалить запись?'|locale }}');">
                                             <div class="btn-group">
                                                 <a href="/cup/form/{{ form.uuid }}/view/{{ item.uuid }}" class="btn btn-sm btn-info">
                                                     <i class="fas fa-fw fa-eye"></i>
-                                                    <span class="d-none d-md-inline-block">Посмотреть</span>
+                                                    <span class="d-none d-md-inline-block">{{ 'Посмотреть'|locale }}</span>
                                                 </a>
                                                 <button type="submit" class="btn btn-sm btn-danger">
                                                     <i class="fas fa-fw fa-trash-alt"></i>
-                                                    <span class="d-none d-md-inline-block">Удалить</span>
+                                                    <span class="d-none d-md-inline-block">{{ 'Удалить'|locale }}</span>
                                                 </button>
                                             </div>
                                         </form>
