--- a/src/Template/cup/catalog/category/index.twig
+++ b/src/Template/cup/catalog/category/index.twig
@@ -42,7 +42,7 @@
                             {% for category in categories.where('parent', category ? category.uuid : NIL).sortBy('order') %}
                                 <tr>
                                     <td>{{ category.title }}</td>
-                                    <td width="15%">{{ categories.where('uuid', category.parent).first().title ?? '&mdash;' }}</td>
+                                    <td width="15%">{{ categories.where('uuid', category.parent).first().title ?? '<code>&mdash;</code>'|raw }}</td>
                                     <td width="45%" class="text-right">
                                         <form action="/cup/catalog/category/{{ category.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить категорию?');">
                                             <div class="btn-group">
